Make background more bright

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Roboto;
-  background-color: #B2EBF2;
+  background-color: #84FFFF;
 }
 
 h1.top-header {
@@ -18,7 +18,7 @@ nav {
 }
 
 article {
-  background-color: #B2EBF2;
+  background-color: #84FFFF;
   border: 1px solid #333;
 }
 
