--- a/docs/css/layout.css
+++ b/docs/css/layout.css
@@ -116,3 +116,15 @@ header, footer, article, nav {
     height: auto;
   }
 }
+
+.m-1 {
+  margin-left: 1.5em;
+}
+
+.m-2 {
+  margin-left: 3em;
+}
+
+.m-3 {
+  margin-left: 4.5em;
+}
