--- a/docs/labs/lab3/task3/variant-4/index_files/style.css
+++ b/docs/labs/lab3/task3/variant-4/index_files/style.css
@@ -1,3 +1,83 @@
+/* navbar ctyle */
+
+nav {
+  font-size: 17px;
+  font-family: Arial;
+  margin-bottom: 10px;
+}
+
+.topnav {
+  overflow: hidden;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.topnav a {
+  min-width: 15%;
+  margin: 0 5px;
+  background-color: #333;
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav a.navbar-item {
+  color: white;
+}
+
+.topnav a.navbar-dropdown {
+  color: white;
+  padding: 0;
+}
+
+select {
+  height: 100%;
+  width: 100%;
+  background-color: #333;
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
+  background-repeat: no-repeat, repeat;
+  background-position: right .7em top 50%, 0 0;
+  background-size: .65em auto, 100%;
+}
+
+select:hover {
+  background-color: #ddd;
+  color: black;
+  text-orientation: upright;
+}
+
+option {
+  background-color: #333;
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  text-decoration: none;
+}
+
+/* end navbar */
+
+
 a.course_item img {
     width: 50px;
     height: 50px;
@@ -2408,10 +2488,6 @@ a.course_item:hover {
     color: #282828;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: #3298f2;
-}
-
-#java #reviews {
-    background-color: #FFFFFF;
 }
 
 #java .week_item, #java .week_item__title::before {
