--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -4,5 +4,6 @@
 {% block content %}
   <h1 class="mt-0">Основи Front-end та Backend розробок</h1>
   <a href="{{ url_for("lab6.lab6_feedback_form") }}">lab6</a><br>
+  <a href="{{ url_for("radio_parts.index") }}">Довідник з радіотехніки</a><br>
   <a href="{{ url_for("videos_collection.videos_collection_main_page") }}">video collection</a>
 {% endblock %}
